Delete option added, code reviewed,  tests added
